<resources>
    <string name="app_name">茌平公交</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="share">分享</string>
    <string name="settings">设置</string>
    <string name="suggest">意见和建议</string>
    <string name="line_search">线路查询</string>
    <string name="station_search">站点查询</string>
    <string name="transfer_search">换乘查询</string>
    <string name="line_favorite">线路收藏</string>
    <string name="recent_search">查询记录</string>
    <string name="navigation">导航</string>
    <string name="line1">K1路</string>
    <string name="line2">K2路</string>
    <string name="line3">K3路</string>
    <string name="line4">K4路</string>
    <string name="line5">K5路</string>
    <string name="line6">K6路</string>
    <string name="hint_bus">为了让茌平的天更蓝，水更绿，请让我们一起努力！</string>
    <string name="content_nav_logo">这是该APP的Logo，一个蓝色背景，一个白色的小汽车</string>
    <string name="changeLine">选择线路</string>
    <string name="line_list">线路\n列表</string>
    <string name="about">关于</string>
    <string name="copy_right_info">CnPeng \nCopyright © 2010–2018 \nCnPeng technology Team</string>
    <string name="use_recommend">本软件由CnPeng团队开发，为您提供茌平公交的实时线路信息。\n\n\n声明:\n 1、本软件使用完全免费，使用过程中产生的网络流量由网络运营商收取。\n 2、本软件在运行过程中，不会收集任何用户信息。 </string>
    <string name="responsePath">您可以通过如下方式反馈相关意见和建议：\n\n 1、邮箱：CnPeng@163.com \n\n 2、微信：893612134 \n\n 3、微信公众号：CnPeng</string>
    <string name="ivContentDesc_weinxinPub">这是一个公众号二维码</string>
</resources>
