<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
>
    <!--<item android:id="@+id/action_settings"-->
    <!--android:orderInCategory="100"-->
    <!--android:title="@string/line1"-->
    <!--app:showAsAction="never"/>-->

    <item
        android:id="@+id/item_line1"
        android:title="@string/line1"/>
    
    <item android:id="@+id/item_line2"
          android:title="@string/line2"
    />
    <item android:id="@+id/item_line3"
          android:title="@string/line3"
    />
    <item android:id="@+id/item_line4"
          android:title="@string/line4"
    />
    <item android:id="@+id/item_line5"
          android:title="@string/line5"
    />
    <item android:id="@+id/item_line6"
          android:title="@string/line6"
    />
</menu>
