<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_line_search"
            android:icon="@android:drawable/ic_menu_zoom"
            android:title="@string/line_search"/>
        <item
            android:id="@+id/nav_station_search"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/station_search"/>
        <item
            android:id="@+id/nav_transfer_search"
            android:icon="@android:drawable/ic_menu_rotate"
            android:title="@string/transfer_search"/>
        
        <item android:id="@+id/nav_line_favorite"
              android:icon="@android:drawable/star_off"
              android:title="@string/line_favorite"/>
        
        <item android:id="@+id/nav_recent_search"
              android:icon="@android:drawable/ic_menu_recent_history"
              android:title="@string/recent_search"/>
        <!--<item-->
            <!--android:id="@+id/nav_navigation"-->
            <!--android:icon="@android:drawable/ic_menu_myplaces"-->
            <!--android:title="@string/navigation"/>-->
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/about"/>
            <item
                android:id="@+id/nav_suggestion"
                android:icon="@android:drawable/ic_menu_edit"
                android:title="@string/suggest"
            />
        </menu>
    </item>

</menu>
