<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/main_00bfff">

        <ImageView
            android:id="@+id/iv_back_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:paddingEnd="10dp"
            android:paddingStart="5dp"
            android:src="@mipmap/nav_back_white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about"
            android:textColor="@color/c_white"
            android:textSize="16sp"/>

    </RelativeLayout>

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="35dp"
        android:src="@mipmap/logo"/>

    <TextView
        android:id="@+id/tv_appAndVersionName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="14sp"
        tools:text="茌平公交\n 版本号：2.2.20"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/use_recommend"
        tools:text="本软件由CnPeng团队开发，为您提供茌平公交的实时线路信息。\n\n声明:\n 1、本软件使用完全免费，使用过程中产生的网络流量由网络运营商收取。\n 2、本软件在运行过程中，不会收集任何用户信息。"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="3dp"
        android:text="@string/copy_right_info"
        android:textSize="14sp"
        tools:text="CnPeng\n CopyRight @ 2010-2018 \n CnPeng Tec Team"/>
    <!--android:text='@{"有限公司\nCopyright © 2010-"+Calendar.getInstance().get(Calendar.YEAR)+"\nZJelite cultural technology Co.,Ltd"}'-->
</LinearLayout>